--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 spring.application.name=ParcialDs
 
-# Configuraci髇 de la base de datos H2
+# Configuraci贸n de la base de datos H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:~/testdb;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Configuraci髇 de JPA
+# Configuraci贸n de JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Puerto de ejecuci髇
-server.port=8081
+# Puerto de ejecuci贸n
+server.port=9000
 
-# Configuraci髇 de OpenAPI
+# Configuraci贸n de OpenAPI
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
