--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,10 @@ spring.jpa.show-sql=true
 # Puerto de ejecución
 server.port=9000
 
-# Configuración de OpenAPI
+# OPEN API
+
+# https://clasefake.onrender.com/swagger-ui/index.html  Así lo llamén en Render
+# http://localhost:8080/swagger-ui/index.html  ASI HAY QUE LLAMARLO Localmente
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
